Implemented tests for endpoints
