# swagger.yml
@@ -64,9 +64,12 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Trail"
+                type: object
+                properties:
+                  trails:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Trail"
         "401":
           description: "Unauthorized - Missing or invalid token"
         "403":
@@ -86,9 +89,12 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Trail"
+                type: object
+                properties:
+                  trails:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Trail"
         "401":
           description: "Unauthorized - Missing or invalid token"
         "403":
@@ -115,7 +121,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Trail"
+                type: object
+                properties:
+                  trail:
+                    $ref: "#/components/schemas/Trail"
         "401":
           description: "Unauthorized - Missing or invalid token"
         "403":
@@ -144,7 +153,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Trail"
+                type: object
+                properties:
+                  trail:
+                    $ref: "#/components/schemas/Trail"
         "401":
           description: "Unauthorized - Missing or invalid token"
         "403":
